--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@next-safe-action/adapter-react-hook-form": "^1.0.13",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.1",
     "next": "15.1.6",
@@ -19,6 +20,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.4",
+    "tailwind-merge": "^3.0.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
