--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "motion": "^12.4.1",
     "next": "15.1.6",
     "next-safe-action": "^7.10.3",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
