--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@hookform/resolvers": "^5.2.1",
     "@next-safe-action/adapter-react-hook-form": "^2.0.0",
     "clsx": "^2.1.1",
+    "geist": "^1.4.2",
     "lucide-react": "^0.540.0",
     "motion": "^12.23.12",
     "next": "15.5.0",
